add css and not found page

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,14 @@
   flex-grow: 1;
 }
 .navbar-pages {
-  background-color: ;
+  background-image: linear-gradient(
+    to right,
+    rgba(39, 147, 235, 0.596),
+    rgba(162, 0, 255, 0.726)
+  );
+  height: 100px;
 }
+
 .footer-page {
   height: 100px;
   background-color: rgb(56, 56, 56);
